Revert "fix: implement Flexbox sticky footer to eliminate bottom white gap"
This reverts commit a990f9039878e65ab52efb92b6d20056d9761ccc.

--- a/css/style.css
+++ b/css/style.css
@@ -49,20 +49,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: clip;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-#page-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  flex: 1 0 auto;
-}
-
-main {
-  flex: 1 0 auto;
 }
 
 /* Page fade transition rules */
